# cobe-sample

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  langgraph.json  package-lock.json  pyproject.toml
agent_agno_v1/: README.md  __init__.py  examples.py
agent_agno_v4_1/: README.md  __init__.py  agents.py  context.py  events.py  extractors.py  models.py  session.py  tools.py  writer_payload.py
agent_deepagent_v4/: README.md  __init__.py  cli.py  config.py  context.py  messages.py  runtime.py  validator.py
agent_openai_sdk_v1/: README.md  __init__.py  session.py  snapshot.py
agent_v2/: __init__.py  cli.py  config.py  debug_log.py  graph.py  memory.py  runtime.py  state.py  step_result.py  supervisor.py  writer.py
agent_v3/: __init__.py  deps.py  gating.py  memory.py  models.py  sop_names.py  state.py  step_result.py  supervisor.py  workflow.py  writer.py
agent_v4/: ARCHITECTURE.md  __init__.py  cli.py  config.py  configurable.py  debug_log.py  graph.py  ids.py  leaves.py  output_schemas.py  registry_defaults.py  runtime.py  state.py  step_result.py  supervisor.py  writer.py
agent_v4_1/: README.md  __init__.py  examples.py
agent_v5/: EVAL_RESULT.md  __init__.py  agent.py  blocks.py  cache_meter.py  context.py  eval_ab.py  middleware.py  subagents.py  supervisor.py  writer.py
agno_agent_v1/: README.md  __init__.py
google_adk_agent_v1/: README.md  __init__.py  session.py  snapshot.py
lg_agent/: README.md  __init__.py
lg_agent_v2/: PRD.md  README.md  __init__.py  session.py  snapshot.py
lg_agent_v3/: README.md  __init__.py  graph.py  session.py  snapshot.py
openai_agent_v1/: README.md  __init__.py  cli.py  examples.py
pydantic_agent_v1/: README.md  __init__.py  session.py  snapshot.py
server/: main.py  main_agno_agent_v1.py  main_agno_v1.py  main_agno_v4_1.py  main_deepagent_v4.py  main_google_adk_agent_v1.py  main_lg.py  main_lg_agent_v2.py  main_lg_agent_v3.py  main_openai_sdk_v1.py  main_openai_v1.py  main_pydantic_agent_v1.py  main_v3.py  main_v4.py  main_v4_1.py  main_v5.py
tests/: conftest.py  test_cart_invalidation.py  test_cart_invariants.py  test_catalog_search.py  (+10 more)
(+493 files in other folders)
