[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-v2"
version = "0.1.0"
description = "LangGraph-based supervisor/SOP/responder/validator agent pipeline (clean-room rewrite)."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-core>=1.4",
    "langchain-openai>=1.2",
    "langgraph-checkpoint>=3.0",
    "deepagents>=0.6.8",
    "pydantic>=2.13",
    "openai>=2.37",
    "rich>=14.2",
    "python-dotenv>=1.0",
    "agno>=2.6.9",
    "langsmith[openai-agents]>=0.8.5",
    "ipython>=9.14.0",
    "httpx>=0.27",
    "pydantic-ai-slim[openai]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_v2*", "agent_v3*", "agent_v4*", "agent_v4_1*", "agent_deepagent_v4*", "agent_agno_v4_1*", "agent_agno_v1*", "agno_agent_v1*", "lg_agent*", "openai_agent_v1*", "pydantic_agent_v1*"]

[tool.pytest.ini_options]
pythonpath = ["."]
